v17.0/interfaces/GC.Spread.Sheets.IWorkbookOptions.md
# Interface: IWorkbookOptions

[Spread](../modules/GC.Spread.md).[Sheets](../modules/GC.Spread.Sheets.md).IWorkbookOptions

## Table of contents

### Properties

- [allSheetsListVisible](GC.Spread.Sheets.IWorkbookOptions.md#allsheetslistvisible)
- [allowAutoCreateHyperlink](GC.Spread.Sheets.IWorkbookOptions.md#allowautocreatehyperlink)
- [allowAutoExtendFilterRange](GC.Spread.Sheets.IWorkbookOptions.md#allowautoextendfilterrange)
- [allowContextMenu](GC.Spread.Sheets.IWorkbookOptions.md#allowcontextmenu)
- [allowCopyPasteExcelStyle](GC.Spread.Sheets.IWorkbookOptions.md#allowcopypasteexcelstyle)
- [allowDynamicArray](GC.Spread.Sheets.IWorkbookOptions.md#allowdynamicarray)
- [allowExtendPasteRange](GC.Spread.Sheets.IWorkbookOptions.md#allowextendpasterange)
- [allowInvalidFormula](GC.Spread.Sheets.IWorkbookOptions.md#allowinvalidformula)
- [allowSheetReorder](GC.Spread.Sheets.IWorkbookOptions.md#allowsheetreorder)
- [allowUndo](GC.Spread.Sheets.IWorkbookOptions.md#allowundo)
- [allowUserDeselect](GC.Spread.Sheets.IWorkbookOptions.md#allowuserdeselect)
- [allowUserDragDrop](GC.Spread.Sheets.IWorkbookOptions.md#allowuserdragdrop)
- [allowUserDragFill](GC.Spread.Sheets.IWorkbookOptions.md#allowuserdragfill)
- [allowUserDragMerge](GC.Spread.Sheets.IWorkbookOptions.md#allowuserdragmerge)
- [allowUserEditFormula](GC.Spread.Sheets.IWorkbookOptions.md#allowusereditformula)
- [allowUserResize](GC.Spread.Sheets.IWorkbookOptions.md#allowuserresize)
- [allowUserZoom](GC.Spread.Sheets.IWorkbookOptions.md#allowuserzoom)
- [autoFitType](GC.Spread.Sheets.IWorkbookOptions.md#autofittype)
- [backColor](GC.Spread.Sheets.IWorkbookOptions.md#backcolor)
- [backgroundImage](GC.Spread.Sheets.IWorkbookOptions.md#backgroundimage)
- [backgroundImageLayout](GC.Spread.Sheets.IWorkbookOptions.md#backgroundimagelayout)
- [calcOnDemand](GC.Spread.Sheets.IWorkbookOptions.md#calcondemand)
- [calculationMode](GC.Spread.Sheets.IWorkbookOptions.md#calculationmode)
- [columnResizeMode](GC.Spread.Sheets.IWorkbookOptions.md#columnresizemode)
- [copyPasteHeaderOptions](GC.Spread.Sheets.IWorkbookOptions.md#copypasteheaderoptions)
- [customList](GC.Spread.Sheets.IWorkbookOptions.md#customlist)
- [cutCopyIndicatorBorderColor](GC.Spread.Sheets.IWorkbookOptions.md#cutcopyindicatorbordercolor)
- [cutCopyIndicatorVisible](GC.Spread.Sheets.IWorkbookOptions.md#cutcopyindicatorvisible)
- [defaultDragFillType](GC.Spread.Sheets.IWorkbookOptions.md#defaultdragfilltype)
- [defaultSheetTabStyles](GC.Spread.Sheets.IWorkbookOptions.md#defaultsheettabstyles)
- [dynamicReferences](GC.Spread.Sheets.IWorkbookOptions.md#dynamicreferences)
- [enableAccessibility](GC.Spread.Sheets.IWorkbookOptions.md#enableaccessibility)
- [enableFormulaTextbox](GC.Spread.Sheets.IWorkbookOptions.md#enableformulatextbox)
- [formulaFormatHint](GC.Spread.Sheets.IWorkbookOptions.md#formulaformathint)
- [grayAreaBackColor](GC.Spread.Sheets.IWorkbookOptions.md#grayareabackcolor)
- [hideSelection](GC.Spread.Sheets.IWorkbookOptions.md#hideselection)
- [highlightInvalidData](GC.Spread.Sheets.IWorkbookOptions.md#highlightinvaliddata)
- [iterativeCalculation](GC.Spread.Sheets.IWorkbookOptions.md#iterativecalculation)
- [iterativeCalculationMaximumChange](GC.Spread.Sheets.IWorkbookOptions.md#iterativecalculationmaximumchange)
- [iterativeCalculationMaximumIterations](GC.Spread.Sheets.IWorkbookOptions.md#iterativecalculationmaximumiterations)
- [newTabVisible](GC.Spread.Sheets.IWorkbookOptions.md#newtabvisible)
- [pasteSkipInvisibleRange](GC.Spread.Sheets.IWorkbookOptions.md#pasteskipinvisiblerange)
- [pivotAreaReference](GC.Spread.Sheets.IWorkbookOptions.md#pivotareareference)
- [referenceStyle](GC.Spread.Sheets.IWorkbookOptions.md#referencestyle)
- [resizeZeroIndicator](GC.Spread.Sheets.IWorkbookOptions.md#resizezeroindicator)
- [rowResizeMode](GC.Spread.Sheets.IWorkbookOptions.md#rowresizemode)
- [scrollByPixel](GC.Spread.Sheets.IWorkbookOptions.md#scrollbypixel)
- [scrollIgnoreHidden](GC.Spread.Sheets.IWorkbookOptions.md#scrollignorehidden)
- [scrollPixel](GC.Spread.Sheets.IWorkbookOptions.md#scrollpixel)
- [scrollbarAppearance](GC.Spread.Sheets.IWorkbookOptions.md#scrollbarappearance)
- [scrollbarMaxAlign](GC.Spread.Sheets.IWorkbookOptions.md#scrollbarmaxalign)
- [scrollbarShowMax](GC.Spread.Sheets.IWorkbookOptions.md#scrollbarshowmax)
- [showDragDropTip](GC.Spread.Sheets.IWorkbookOptions.md#showdragdroptip)
- [showDragFillSmartTag](GC.Spread.Sheets.IWorkbookOptions.md#showdragfillsmarttag)
- [showDragFillTip](GC.Spread.Sheets.IWorkbookOptions.md#showdragfilltip)
- [showHorizontalScrollbar](GC.Spread.Sheets.IWorkbookOptions.md#showhorizontalscrollbar)
- [showResizeTip](GC.Spread.Sheets.IWorkbookOptions.md#showresizetip)
- [showScrollTip](GC.Spread.Sheets.IWorkbookOptions.md#showscrolltip)
- [showVerticalScrollbar](GC.Spread.Sheets.IWorkbookOptions.md#showverticalscrollbar)
- [tabEditable](GC.Spread.Sheets.IWorkbookOptions.md#tabeditable)
- [tabNavigationVisible](GC.Spread.Sheets.IWorkbookOptions.md#tabnavigationvisible)
- [tabStripPosition](GC.Spread.Sheets.IWorkbookOptions.md#tabstripposition)
- [tabStripRatio](GC.Spread.Sheets.IWorkbookOptions.md#tabstripratio)
- [tabStripVisible](GC.Spread.Sheets.IWorkbookOptions.md#tabstripvisible)
- [tabStripWidth](GC.Spread.Sheets.IWorkbookOptions.md#tabstripwidth)
- [useTouchLayout](GC.Spread.Sheets.IWorkbookOptions.md#usetouchlayout)

## Properties

### <a id="allsheetslistvisible" name="allsheetslistvisible"></a> allSheetsListVisible

• **allSheetsListVisible**: [`AllSheetsListVisibility`](../enums/GC.Spread.Sheets.AllSheetsListVisibility.md)

电子表格是否显示特殊选项卡，以允许用户打开对话框以显示所有工作表

___

### <a id="allowautocreatehyperlink" name="allowautocreatehyperlink"></a> allowAutoCreateHyperlink

• **allowAutoCreateHyperlink**: `boolean`

是否启用电子表格中的自动创建超链接

___

### <a id="allowautoextendfilterrange" name="allowautoextendfilterrange"></a> allowAutoExtendFilterRange

• **allowAutoExtendFilterRange**: `boolean`

指示过滤器是否可以像Excel那样自动扩展范围

___

### <a id="allowcontextmenu" name="allowcontextmenu"></a> allowContextMenu

• **allowContextMenu**: `boolean`

是否允许用户打开内置的上下文菜单

___

### <a id="allowcopypasteexcelstyle" name="allowcopypasteexcelstyle"></a> allowCopyPasteExcelStyle

• **allowCopyPasteExcelStyle**: `boolean`

用户是否可以从电子表格中复制样式，然后粘贴到Excel中，或者从Excel中复制样式，然后粘贴到电子表格中

___

### <a id="allowdynamicarray" name="allowdynamicarray"></a> allowDynamicArray

• **allowDynamicArray**: `boolean`

是否启用动态数组

___

### <a id="allowextendpasterange" name="allowextendpasterange"></a> allowExtendPasteRange

• **allowExtendPasteRange**: `boolean`

如果粘贴范围不够，是否扩展粘贴范围

___

### <a id="allowinvalidformula" name="allowinvalidformula"></a> allowInvalidFormula

• **allowInvalidFormula**: `boolean`

指示是否允许输入无效的公式字符串

___

### <a id="allowsheetreorder" name="allowsheetreorder"></a> allowSheetReorder

• **allowSheetReorder**: `boolean`

用户是否可以重新排列 Spread 组件中的工作表

___

### <a id="allowundo" name="allowundo"></a> allowUndo

• **allowUndo**: `boolean`

是否允许用户撤销编辑

___

### <a id="allowuserdeselect" name="allowuserdeselect"></a> allowUserDeselect

• **allowUserDeselect**: `boolean`

是否允许用户可以在选择中使用取消选择

___

### <a id="allowuserdragdrop" name="allowuserdragdrop"></a> allowUserDragDrop

• **allowUserDragDrop**: `boolean`

是否允许用户拖放范围数据

___

### <a id="allowuserdragfill" name="allowuserdragfill"></a> allowUserDragFill

• **allowUserDragFill**: `boolean`

是否允许用户拖动填充范围

___

### <a id="allowuserdragmerge" name="allowuserdragmerge"></a> allowUserDragMerge

• **allowUserDragMerge**: `boolean`

是否允许用户拖动合并单元格

___

### <a id="allowusereditformula" name="allowusereditformula"></a> allowUserEditFormula

• **allowUserEditFormula**: `boolean`

用户是否可以在电子表格中的单元格中编辑公式

___

### <a id="allowuserresize" name="allowuserresize"></a> allowUserResize

• **allowUserResize**: `boolean`

是否允许用户调整列和行大小

___

### <a id="allowuserzoom" name="allowuserzoom"></a> allowUserZoom

• **allowUserZoom**: `boolean`

是否在按下CTRL键时滚动鼠标车轮来缩小显示器

___

### <a id="autofittype" name="autofittype"></a> autoFitType

• **autoFitType**: [`AutoFitType`](../enums/GC.Spread.Sheets.AutoFitType.md)

内容是否将被格式化以适应单元格或单元格和标题

___

### <a id="backcolor" name="backcolor"></a> backColor

• **backColor**: `string`

用于表示 SpreadJS 组件背景颜色的颜色字符串，例如 "red"、"#FFFF00"、"rgb(255,0,0)"、"Accent 5" 等

___

### <a id="backgroundimage" name="backgroundimage"></a> backgroundImage

• **backgroundImage**: `string`

SpreadJS 组件的背景图片

___

### <a id="backgroundimagelayout" name="backgroundimagelayout"></a> backgroundImageLayout

• **backgroundImageLayout**: [`ImageLayout`](../enums/GC.Spread.Sheets.ImageLayout.md)

SpreadJS 组件的背景图片布局

___

### <a id="calcondemand" name="calcondemand"></a> calcOnDemand

• **calcOnDemand**: `boolean`

是否仅在需要时计算公式

___

### <a id="calculationmode" name="calculationmode"></a> calculationMode

• **calculationMode**: [`CalculationMode`](../enums/GC.Spread.Sheets.CalculationMode.md)

工作簿的重新计算行为。默认值是自动

___

### <a id="columnresizemode" name="columnresizemode"></a> columnResizeMode

• **columnResizeMode**: [`ResizeMode`](../enums/GC.Spread.Sheets.ResizeMode.md)

指定调整大小列的方式

___

### <a id="copypasteheaderoptions" name="copypasteheaderoptions"></a> copyPasteHeaderOptions

• **copyPasteHeaderOptions**: [`CopyPasteHeaderOptions`](../enums/GC.Spread.Sheets.CopyPasteHeaderOptions.md)

当数据复制到或粘贴时，包括哪些标题

___

### <a id="customlist" name="customlist"></a> customList

• `Optional` **customList**: `string`[][]

用户自定义拖动填充功能的列表，优先匹配每个填充中的此列表。每个数组项都是字符串数组类型

___

### <a id="cutcopyindicatorbordercolor" name="cutcopyindicatorbordercolor"></a> cutCopyIndicatorBorderColor

• **cutCopyIndicatorBorderColor**: `string`

当用户剪切或复制选择时显示的指示符的边框颜色

___

### <a id="cutcopyindicatorvisible" name="cutcopyindicatorvisible"></a> cutCopyIndicatorVisible

• **cutCopyIndicatorVisible**: `boolean`

是否在复制或剪切选定项时显示指示器

___

### <a id="defaultdragfilltype" name="defaultdragfilltype"></a> defaultDragFillType

• **defaultDragFillType**: [`AutoFillType`](../enums/GC.Spread.Sheets.Fill.AutoFillType.md)

默认填充类型

___

### <a id="defaultsheettabstyles" name="defaultsheettabstyles"></a> defaultSheetTabStyles

• **defaultSheetTabStyles**: [`SheetTabStyles`](../modules/GC.Spread.Sheets.md#sheettabstyles)

默认表格标签样式

___

### <a id="dynamicreferences" name="dynamicreferences"></a> dynamicReferences

• **dynamicReferences**: `boolean`

是否使用动态参考计算功能

___

### <a id="enableaccessibility" name="enableaccessibility"></a> enableAccessibility

• **enableAccessibility**: `boolean`

是否可以在电子表格中启用可访问性支持

___

### <a id="enableformulatextbox" name="enableformulatextbox"></a> enableFormulaTextbox

• **enableFormulaTextbox**: `boolean`

是否在电子表格中启用公式文本框

___

### <a id="formulaformathint" name="formulaformathint"></a> formulaFormatHint

• **formulaFormatHint**: `boolean`

指示当公式输入时是否会自动生成格式

___

### <a id="grayareabackcolor" name="grayareabackcolor"></a> grayAreaBackColor

• **grayAreaBackColor**: `string`

用于表示灰色区域背景颜色的颜色字符串，如"red"，"#FFFF00"，"rgb(255,0,0)"，"Accent 5"等

___

### <a id="hideselection" name="hideselection"></a> hideSelection

• **hideSelection**: `boolean`

Spread 组件失去焦点时是否显示选择高亮

___

### <a id="highlightinvaliddata" name="highlightinvaliddata"></a> highlightInvalidData

• **highlightInvalidData**: `boolean`

是否高亮显示无效数据

___

### <a id="iterativecalculation" name="iterativecalculation"></a> iterativeCalculation

• **iterativeCalculation**: `boolean`

是否启用迭代计算

___

### <a id="iterativecalculationmaximumchange" name="iterativecalculationmaximumchange"></a> iterativeCalculationMaximumChange

• **iterativeCalculationMaximumChange**: `number`

迭代计算时的最大变化

___

### <a id="iterativecalculationmaximumiterations" name="iterativecalculationmaximumiterations"></a> iterativeCalculationMaximumIterations

• **iterativeCalculationMaximumIterations**: `number`

迭代计算时的最大迭代

___

### <a id="newtabvisible" name="newtabvisible"></a> newTabVisible

• **newTabVisible**: `boolean`

电子表格是否显示特殊选项卡以使用户插入新表单

___

### <a id="pasteskipinvisiblerange" name="pasteskipinvisiblerange"></a> pasteSkipInvisibleRange

• **pasteSkipInvisibleRange**: `boolean`

是否跳过粘贴不可见范围。默认值为 false

___

### <a id="pivotareareference" name="pivotareareference"></a> pivotAreaReference

• **pivotAreaReference**: [`PivotAreaReference`](../enums/GC.Spread.Pivot.PivotAreaReference.md)

在选择数据透视表数据区域时，是否自动生成 getPivotData 公式或单元格引用。默认值为 getPivotData

___

### <a id="referencestyle" name="referencestyle"></a> referenceStyle

• **referenceStyle**: [`ReferenceStyle`](../enums/GC.Spread.Sheets.ReferenceStyle.md)

在此工作表上的单元格公式中的单元格和范围引用样式

___

### <a id="resizezeroindicator" name="resizezeroindicator"></a> resizeZeroIndicator

• **resizeZeroIndicator**: [`ResizeZeroIndicator`](../enums/GC.Spread.Sheets.ResizeZeroIndicator.md)

当行或列调整大小为零时的绘图策略

___

### <a id="rowresizemode" name="rowresizemode"></a> rowResizeMode

• **rowResizeMode**: [`ResizeMode`](../enums/GC.Spread.Sheets.ResizeMode.md)

指定调整行大小的方式

___

### <a id="scrollbypixel" name="scrollbypixel"></a> scrollByPixel

• **scrollByPixel**: `boolean`

是否可以通过像素启用精度滚动

___

### <a id="scrollignorehidden" name="scrollignorehidden"></a> scrollIgnoreHidden

• **scrollIgnoreHidden**: `boolean`

滚动条是忽略隐藏的行还是列

___

### <a id="scrollpixel" name="scrollpixel"></a> scrollPixel

• **scrollPixel**: `number`

当 scrollByPixel 为 true 时，决定每次滚动指定数量的像素。最终滚动的像素数是滚动增量乘以滚动像素。例如，滚动增量为3，滚动像素为5，最终滚动的像素数为15

___

### <a id="scrollbarappearance" name="scrollbarappearance"></a> scrollbarAppearance

• `Optional` **scrollbarAppearance**: [`ScrollbarAppearance`](../enums/GC.Spread.Sheets.ScrollbarAppearance.md)

滚动条的外观，包含 skin 和 mobile 两个枚举值。默认为 skin

___

### <a id="scrollbarmaxalign" name="scrollbarmaxalign"></a> scrollbarMaxAlign

• **scrollbarMaxAlign**: `boolean`

滚动条是否与活动表的最后一行和最后一列对齐

___

### <a id="scrollbarshowmax" name="scrollbarshowmax"></a> scrollbarShowMax

• **scrollbarShowMax**: `boolean`

显示的滚动条是否基于工作表中的所有列和行的数量

___

### <a id="showdragdroptip" name="showdragdroptip"></a> showDragDropTip

• **showDragDropTip**: `boolean`

是否显示拖放提示

___

### <a id="showdragfillsmarttag" name="showdragfillsmarttag"></a> showDragFillSmartTag

• **showDragFillSmartTag**: `boolean`

是否显示拖动填充对话框

___

### <a id="showdragfilltip" name="showdragfilltip"></a> showDragFillTip

• **showDragFillTip**: `boolean`

是否显示拖曳技巧

___

### <a id="showhorizontalscrollbar" name="showhorizontalscrollbar"></a> showHorizontalScrollbar

• **showHorizontalScrollbar**: `boolean`

是否显示水平滚动条

___

### <a id="showresizetip" name="showresizetip"></a> showResizeTip

• **showResizeTip**: [`ShowResizeTip`](../enums/GC.Spread.Sheets.ShowResizeTip.md)

如何显示调整大小的提示

___

### <a id="showscrolltip" name="showscrolltip"></a> showScrollTip

• **showScrollTip**: [`ShowScrollTip`](../enums/GC.Spread.Sheets.ShowScrollTip.md)

如何显示滚动提示

___

### <a id="showverticalscrollbar" name="showverticalscrollbar"></a> showVerticalScrollbar

• **showVerticalScrollbar**: `boolean`

是否显示垂直滚动条

___

### <a id="tabeditable" name="tabeditable"></a> tabEditable

• **tabEditable**: `boolean`

是否允许用户编辑表格标签条

___

### <a id="tabnavigationvisible" name="tabnavigationvisible"></a> tabNavigationVisible

• **tabNavigationVisible**: `boolean`

是否显示表格标签导航

___

### <a id="tabstripposition" name="tabstripposition"></a> tabStripPosition

• **tabStripPosition**: [`TabStripPosition`](../enums/GC.Spread.Sheets.TabStripPosition.md)

标签条的位置。默认值为底部

___

### <a id="tabstripratio" name="tabstripratio"></a> tabStripRatio

• **tabStripRatio**: `number`

标签条的宽度表示为整体水平滚动条宽度的百分比

___

### <a id="tabstripvisible" name="tabstripvisible"></a> tabStripVisible

• **tabStripVisible**: `boolean`

是否显示表格标签条

___

### <a id="tabstripwidth" name="tabstripwidth"></a> tabStripWidth

• **tabStripWidth**: `number`

标签条的宽度在左右位置时。默认和最小值是80

___

### <a id="usetouchlayout" name="usetouchlayout"></a> useTouchLayout

• **useTouchLayout**: `boolean`

是否使用触摸布局来呈现 SpreadJS 组件
